--- a/about.html
+++ b/about.html
@@ -198,9 +198,10 @@ Furthermore, we ensure timely delivery, transparent Gallery, and dedicated after
     <!-- Contact -->
     <div class="footer-col">
       <h4>Contact Us</h4>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Address:</span> H.No14, SR No.8/17, New Suvarna Colony, Lane No.1, Karnenagar, Pune-411041, Maharashtra, India</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Contact:</span> +91 98765 43210</p>
-      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Email:</span> info@sunmaxsolar.com</p>
+      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Address:</span> Plot No. 14, Suvarna Colony, Karvenagar,
+Pune - 411052</p>
+      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Contact:</span> +91 9881056604</p>
+      <p><span style="font-weight:700; display:inline-block; width:80px; text-transform:uppercase;">Email:</span>sunmaxsolar2018@gmail.com</p>
     </div>
 
     <!-- Social Links -->
