--- a/gallery.html
+++ b/gallery.html
@@ -20,7 +20,7 @@
   <div class="container">
     
     <!-- Section Heading -->
-    <h2>Our projects Gallery</h2>
+    <h2>Our Projects Gallery</h2>
     <p>A glimpse of our celebrations, events and memorable moments captured in pictures.</p>
 
     <!-- Masonry Gallery Grid -->
@@ -29,38 +29,37 @@
   <!-- Example you already had -->
 
 
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Yashwant Dangat, wadgao</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">5kw yogesh dangat, wadgao</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw pradhyuman gopal, suncity</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw purshottam gopal, suncity</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">30kw Maple tower, NIBM ROAD</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw jayesh solanki, undri</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2Kw tarkunde , nigadi</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw satkar reality, taljai pathar</div></div>
+  <div class="gallery-item"><img src="Gallery/2kw_Nasim_Bagwan_katraj.jpg" alt="Event"><div class="overlay">2kw Nasim Bagwan, katraj</div></div>
+  <div class="gallery-item"><img src="Gallery/40kw_Gharkul_Society_spine_road.jpg" alt="Event"><div class="overlay">40kw Gharkul Society, spine road</div></div>
+  <div class="gallery-item"><img src="Gallery/9_3kw_kendiya_vihar_Street_light .jpg" alt="Event"><div class="overlay">9.3kw kendiya vihar Street light </div></div>
+  <div class="gallery-item"><img src="Gallery/9_3kw_kendiya_vihar_cummunity_hall.jpg" alt="Event"><div class="overlay">9.3kw  kendiya vihar cummunity hall</div></div>
+  <div class="gallery-item"><img src="Gallery/30kw_Kendriya_Vihar_society_chikhli.jpg" alt="Event"><div class="overlay">30kw Kendriya Vihar society, chikhli.</div></div>
+
+  <!-- <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw satkar reality, taljai pathar</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Dr.kamble, Ravet</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">20kw Deccan park hotel , fergusen college road</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw MR. Rohan Bihani, Prabhat road</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw+25kw Vallonia, bavdhan</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw Rajlakshmi Hall, kothrud</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw Rajlakshmi Hall, kothrud</div></div> -->
 
   <!-- Videos -->
-  <!-- <div class="gallery-item">
+<div class="gallery-item">
     <video width="100%" controls>
-      <source src="images/Video02.mp4" type="video/mp4">
+      <source src="Gallery/Earthing_works.mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="overlay">30kw Kendriya Vihar society, Chikhli.</div>
+    <div class="overlay">Earthing Work </div>
   </div>
 
   <div class="gallery-item">
     <video width="100%" controls>
-      <source src="images/video_01.mp4" type="video/mp4">
+      <source src="Gallery/Earthing_work_01 .mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
-    <div class="overlay">9.3kw Kendiya Vihar Community Hall</div>
-  </div> -->
+    <div class="overlay">Earthing Work </div>
+  </div> 
 
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">9.3kw Kendiya Vihar Street light</div></div>
+  <!-- <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">9.3kw Kendiya Vihar Street light</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Satav commercial space, Wagholi</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw Satav complex, Wagholi</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">40kw Gharkul Society, spine road</div></div>
@@ -74,7 +73,7 @@
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Mr. Shankar Kedari, Karvenagar</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">3kw Mr. Galgali, Bhugao</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2kw Nasim Bagwan, Katraj</div></div>
-  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2kw Mr. Baviskar, Kharadi</div></div>
+  <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">2kw Mr. Baviskar, Kharadi</div></div> -->
 
 </div>
 
