Updated FibrodrainRecessPage and fixed quote & apostrophe issues

--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,8 @@
 
   <div class="gallery-item"><img src="Gallery/2kw_Nasim_Bagwan_katraj.jpg" alt="Event"><div class="overlay">2kw Nasim Bagwan, katraj</div></div>
   <div class="gallery-item"><img src="Gallery/40kw_Gharkul_Society_spine_road.jpg" alt="Event"><div class="overlay">40kw Gharkul Society, spine road</div></div>
-  <div class="gallery-item"><img src="Gallery/9_3kw_kendiya_vihar_Street_light .jpg" alt="Event"><div class="overlay">9.3kw kendiya vihar Street light </div></div>
-  <div class="gallery-item"><img src="Gallery/9_3kw_kendiya_vihar_cummunity_hall.jpg" alt="Event"><div class="overlay">9.3kw  kendiya vihar cummunity hall</div></div>
+  <div class="gallery-item"><img src="Gallery/kendriya_01.jpg" alt="Event"><div class="overlay">9.3kw kendiya vihar Street light </div></div>
+
   <div class="gallery-item"><img src="Gallery/30kw_Kendriya_Vihar_society_chikhli.jpg" alt="Event"><div class="overlay">30kw Kendriya Vihar society, chikhli.</div></div>
 
   <!-- <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw satkar reality, taljai pathar</div></div>
@@ -43,6 +43,15 @@
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">25kw Rajlakshmi Hall, kothrud</div></div> -->
 
   <!-- Videos -->
+   <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="Gallery/Kendriya_video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">9.3kw  kendiya vihar cummunity hall</div>
+  </div>
+
+
 <div class="gallery-item">
     <video width="100%" controls>
       <source src="Gallery/Earthing_works.mp4" type="video/mp4">
