--- a/navbar.html
+++ b/navbar.html
@@ -12,7 +12,7 @@
 <header>
   <nav class="navbar">
     <div class="logo">
-      <img src="images/LOGO.jpg" alt="SS Power Logo">
+      <img src="images/LOGO_01.jpg" alt="SS Power Logo">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
