Updated FibrodrainRecessPage a issues

--- a/loader.html
+++ b/loader.html
@@ -159,9 +159,9 @@
 
 <!-- Loader Section -->
 <section id="loader">
-  <img src="images/LOGO.jpg" alt="SS Power Watermark" class="watermark" />
+  <img src="images/LOGO_01.jpg" alt="SS Power Watermark" class="watermark" />
   <div class="ring"></div>
-  <img src="images/LOGO.jpg" alt="SS Power Logo" class="loader-logo" />
+  <img src="images/LOGO_01.jpg" alt="SS Power Logo" class="loader-logo" />
   <h1 class="slogan">Powering a Sustainable Future with Solar Energy</h1>
   <ul>
     <li>Solar Rooftop Systems</li>
