Updated Fibrodrophe issues

--- a/about.html
+++ b/about.html
@@ -131,27 +131,27 @@ Furthermore, we ensure timely delivery, transparent policies and dedicated after
 Solar Services & Solutions</h2>
 
   <div class="why-item">
-    <div class="icon" style="background:#b30000;">01</div>
+    <div class="icon" style="background:#0a3d62;">01</div>
     <p>Over 10 years of expertise in solar energy projects, ensuring reliable and sustainable solutions.</p>
   </div>
 
   <div class="why-item">
-    <div class="icon" style="background:#b30000;">02</div>
+    <div class="icon" style="background:#0a3d62;">02</div>
     <p>Customized solar systems designed for residential, commercial and industrial applications.</p>
   </div>
 
   <div class="why-item">
-    <div class="icon" style="background:#b30000;">03</div>
+    <div class="icon" style="background:#0a3d62;">03</div>
     <p>End-to-end services including consultation, design, installation and ongoing maintenance.</p>
   </div>
 
   <div class="why-item">
-    <div class="icon" style="background:#b30000;">04</div>
+    <div class="icon" style="background:#0a3d62;">04</div>
     <p>High-quality panels and equipment that maximize efficiency and reduce electricity costs.</p>
   </div>
 
   <div class="why-item">
-    <div class="icon" style="background:#b30000;">05</div>
+    <div class="icon" style="background:#0a3d62;">05</div>
     <p>Committed to reducing carbon footprints and promoting a cleaner, greener future.</p>
   </div>
 </div>
@@ -213,7 +213,7 @@ Solar Services & Solutions</h2>
     
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <img src="images/LOGO_01.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
       <p style="line-height:1.7; font-size:16px; color:#fff;">
         Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
       </p>
