--- a/images/CONTACT.html
+++ b/images/CONTACT.html
@@ -27,7 +27,7 @@
 
     /* Left Red Card */
     .contact-info {
-      background: #b71c1c;;
+      background: #0a3d62;;
       color: #fff;
       padding: 40px;
       width: 40%;
@@ -89,7 +89,7 @@
       height: 100px;
     }
     .contact-form button {
-      background: #b71c1c;;
+      background: #0a3d62;;
       border: none;
       color: #fff;
       padding: 12px 35px;
