--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
  
     <!-- CTA Button -->
  <a href="yojna.html" 
-   style="align-self:flex-start; padding:14px 32px; background:#ffdede; color:#800020; 
+   style="align-self:flex-start; padding:14px 32px; background:#ffdede; color:#0a3d62; 
           text-decoration:none; font-weight:600; font-size:1.1rem; border-radius:25px; 
           transition:0.3s; box-shadow:0 4px 12px rgba(0,0,0,0.3);">
   Read More →
@@ -179,7 +179,7 @@
       <h3 style="font-size:1.1rem; margin:15px 20px 8px 20px; color:#333; text-align:center; z-index:2; transition: opacity 0.3s ease;">Solar Panel</h3>
       <div class="info" style="position:absolute; bottom:0; left:0; width:100%; background:rgba(255,255,255,0.95); padding:25px 20px 15px 20px; box-sizing:border-box; transform:translateY(100%); opacity:0; transition:transform 0.4s ease, opacity 0.4s ease; text-align:center;">
         <p style="font-size:0.95rem; color:#555; margin:8px 0 12px; line-height:1.5;">High-efficiency solar panels for homes and industries, ensuring long-lasting performance and energy savings.</p>
-        <a href="solar_panel.html" style="display:inline-block; text-decoration:none; background:#e63946; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
+        <a href="solar_panel.html" style="display:inline-block; text-decoration:none; background:#0a3d62; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
       </div>
     </div>
 
@@ -191,7 +191,7 @@
       <h3 style="font-size:1.1rem; margin:15px 20px 8px 20px; color:#333; text-align:center; z-index:2; transition: opacity 0.3s ease;">Solar Rooftop System</h3>
       <div class="info" style="position:absolute; bottom:0; left:0; width:100%; background:rgba(255,255,255,0.95); padding:25px 20px 15px 20px; box-sizing:border-box; transform:translateY(100%); opacity:0; transition:transform 0.4s ease, opacity 0.4s ease; text-align:center;">
         <p style="font-size:0.95rem; color:#555; margin:8px 0 12px; line-height:1.5;">Custom-designed rooftop solar systems to maximize energy generation and reduce electricity bills effectively.</p>
-        <a href="solar_rooftop.html" style="display:inline-block; text-decoration:none; background:#e63946; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
+        <a href="solar_rooftop.html" style="display:inline-block; text-decoration:none; background:#0a3d62; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
       </div>
     </div>
 
@@ -203,7 +203,7 @@
       <h3 style="font-size:1.1rem; margin:15px 20px 8px 20px; color:#333; text-align:center; z-index:2; transition: opacity 0.3s ease;">Solar Power System</h3>
       <div class="info" style="position:absolute; bottom:0; left:0; width:100%; background:rgba(255,255,255,0.95); padding:25px 20px 15px 20px; box-sizing:border-box; transform:translateY(100%); opacity:0; transition:transform 0.4s ease, opacity 0.4s ease; text-align:center;">
         <p style="font-size:0.95rem; color:#555; margin:8px 0 12px; line-height:1.5;">Complete solar power solutions for residential and commercial spaces with reliable performance and efficiency.</p>
-        <a href="solar_power.html" style="display:inline-block; text-decoration:none; background:#e63946; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
+        <a href="solar_power.html" style="display:inline-block; text-decoration:none; background:#0a3d62; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
       </div>
     </div>
 
@@ -215,7 +215,7 @@
       <h3 style="font-size:1.1rem; margin:15px 20px 8px 20px; color:#333; text-align:center; z-index:2; transition: opacity 0.3s ease;">Solar Water Heater</h3>
       <div class="info" style="position:absolute; bottom:0; left:0; width:100%; background:rgba(255,255,255,0.95); padding:25px 20px 15px 20px; box-sizing:border-box; transform:translateY(100%); opacity:0; transition:transform 0.4s ease, opacity 0.4s ease; text-align:center;">
         <p style="font-size:0.95rem; color:#555; margin:8px 0 12px; line-height:1.5;">High-quality solar water heaters for homes and industries, reducing electricity bills and supporting sustainable energy.</p>
-        <a href="solare_water_heater.html" style="display:inline-block; text-decoration:none; background:#e63946; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
+        <a href="solare_water_heater.html" style="display:inline-block; text-decoration:none; background:#0a3d62; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
       </div>
     </div>
 
@@ -227,7 +227,7 @@
       <h3 style="font-size:1.1rem; margin:15px 20px 8px 20px; color:#333; text-align:center; z-index:2; transition: opacity 0.3s ease;">Solar System Repair & Maintenance</h3>
       <div class="info" style="position:absolute; bottom:0; left:0; width:100%; background:rgba(255,255,255,0.95); padding:25px 20px 15px 20px; box-sizing:border-box; transform:translateY(100%); opacity:0; transition:transform 0.4s ease, opacity 0.4s ease; text-align:center;">
         <p style="font-size:0.95rem; color:#555; margin:8px 0 12px; line-height:1.5;">We provide professional repair and maintenance services for all solar power systems, ensuring efficiency and longevity.</p>
-        <a href="solar_system_repair.html" style="display:inline-block; text-decoration:none; background:#e63946; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
+        <a href="solar_system_repair.html" style="display:inline-block; text-decoration:none; background:#0a3d62; color:#fff; padding:10px 24px; border-radius:25px; font-weight:500; font-size:0.95rem; transition: background 0.3s, transform 0.3s; margin-top:5px;">Read More</a>
       </div>
     </div>
 
@@ -305,7 +305,7 @@ background-size: cover; background-attachment: fixed; color:#333;">
   <!-- Button -->
   <div style="text-align:center; margin-top:40px;">
     <button id="viewAllBtn" style="padding:14px 32px; font-size:1.2rem; font-family:'Poppins',sans-serif;  border:none; border-radius:25px;
-      background-color:#b71c1c;  color:white; font-weight:600; cursor:pointer;
+      background-color:#0a3d62;  color:white; font-weight:600; cursor:pointer;
       box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s;">
       View All Partners
     </button>
@@ -314,7 +314,7 @@ background-size: cover; background-attachment: fixed; color:#333;">
   <!-- Hidden Grid Popup -->
   <div id="clientsPopup" style="display:none; position:fixed; top:0; left:0; right:0; bottom:0; background:rgba(0,0,0,0.8); z-index:9999; overflow-y:auto; padding:60px 20px;">
     <div style="max-width:1200px; margin:auto; background:white; border-radius:12px; padding:40px; position:relative;">
-<button id="closePopup" style="position:absolute; font-size:18px; font-family:'Times New Roman', Times, serif; top:20px; right:20px; background:#b71c1c; border:none; color:white; padding:10px 18px; border-radius:6px; font-weight:bold; cursor:pointer;">
+<button id="closePopup" style="position:absolute; font-size:18px; font-family:'Times New Roman', Times, serif; top:20px; right:20px; background:#0a3d62; border:none; color:white; padding:10px 18px; border-radius:6px; font-weight:bold; cursor:pointer;">
   Close ✕
 </button>
 
@@ -571,33 +571,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 <!-- Why Solar System -->
-<section class="why-section">
-  <div class="why-container">
-    <div class="why-col gsap-fade-up">
-      <h3>Why Solar System</h3>
-      <ul>
 
-  <li>Solar energy is important for many reasons, including a long project life of more than 25 years, providing reliable and consistent energy generation for decades.</li>
-  <li>Reliable Technology: Solar panels are designed to work efficiently under various weather conditions and require minimal maintenance.</li>
-  <li>System Warranty: Most solar systems come with a warranty of 25 years, ensuring performance and long-term reliability.</li>
-  <li>Government Support: Enjoy subsidies, tax benefits and depreciation advantages offered by the government, reducing the upfront cost of installation.</li>
-  <li>Environmental Benefits: Solar energy supports a green and clean environment by reducing carbon footprint and dependency on fossil fuels.</li>
-  <li>Cost Savings: Residential, commercial and industrial users can significantly reduce electricity bills, sometimes up to 90%, depending on system size and consumption.</li>
-  <li>Energy Independence: Solar systems reduce dependence on the grid and provide backup during power outages.</li>
-  <li>Scalable & Flexible: Solar systems can be installed on rooftops, open lands, or industrial spaces and can be expanded as energy needs grow.</li>
 
-      </ul>
-    </div>
-    <div class="why-col gsap-fade-up">
-      <img src="images/WHY_CHOOSE_US.png" alt="Solar Diagram">
-      <div class="info-box">
-        <h3>On-grid Systems / Grid Tie Systems & Net Metering</h3>
-        <p>Most widely used systems installed across India. These systems are installed in societies, homes, offices, factories, schools, hospitals, hotels, banks and many more.</p>
-        <p>Net Metering: Any excess energy exported to the grid can be adjusted in the bill. This ensures maximum savings and efficiency.</p>
-      </div>
-    </div>
-  </div>
-</section>
+
 
   <div class="divider-top" style="margin:0; padding:0; width:100%; overflow:hidden;">
     <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="display:block; width:100%; height:100px;">
@@ -623,7 +599,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <!-- Testimonial 1 -->
         <div class="swiper-slide client-testimonial-card" style="background:#f9f9f9,#eaf4ff; padding:25px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s; min-height:280px;">
           <div class="stars" style="color:#FFD700; font-size:22px; margin-bottom:12px;">⭐⭐⭐⭐⭐</div>
-          <h4 class="name" style="font-size:18px; font-weight:600; color:#b22222; margin-bottom:12px;">
+          <h4 class="name" style="font-size:18px; font-weight:600; color:#0a3d62; margin-bottom:12px;">
             Rajesh Sharma – Pune
           </h4>
           <p style="font-size:15px; color:#555; line-height:1.6;">
@@ -634,7 +610,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <!-- Testimonial 2 -->
         <div class="swiper-slide client-testimonial-card" style="background:#f9f9f9,#eaf4ff; padding:25px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s; min-height:280px;">
           <div class="stars" style="color:#FFD700; font-size:22px; margin-bottom:12px;">⭐⭐⭐⭐⭐</div>
-          <h4 class="name" style="font-size:18px; font-weight:600; color:#b22222; margin-bottom:12px;">
+          <h4 class="name" style="font-size:18px; font-weight:600; color:#0a3d62; margin-bottom:12px;">
             Sneha Patil – Industrial Client
           </h4>
           <p style="font-size:15px; color:#555; line-height:1.6;">
@@ -645,7 +621,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <!-- Testimonial 3 -->
         <div class="swiper-slide client-testimonial-card" style="background:#f9f9f9,#eaf4ff; padding:25px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s; min-height:280px;">
           <div class="stars" style="color:#FFD700; font-size:22px; margin-bottom:12px;">⭐⭐⭐⭐⭐</div>
-          <h4 class="name" style="font-size:18px; font-weight:600; color:#b22222; margin-bottom:12px;">
+          <h4 class="name" style="font-size:18px; font-weight:600; color:#0a3d62; margin-bottom:12px;">
             Amit Kulkarni – Commercial Building Owner
           </h4>
           <p style="font-size:15px; color:#555; line-height:1.6;">
@@ -656,7 +632,7 @@ document.addEventListener("DOMContentLoaded", () => {
         <!-- Testimonial 4 -->
         <div class="swiper-slide client-testimonial-card" style="background:#f9f9f9,#eaf4ff; padding:25px; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); transition:transform 0.3s; min-height:280px;">
           <div class="stars" style="color:#FFD700; font-size:22px; margin-bottom:12px;">⭐⭐⭐⭐⭐</div>
-          <h4 class="name" style="font-size:18px; font-weight:600; color:#b22222; margin-bottom:12px;">
+          <h4 class="name" style="font-size:18px; font-weight:600; color:#0a3d62; margin-bottom:12px;">
             Deepak Joshi – Housing Society
           </h4>
           <p style="font-size:15px; color:#555; line-height:1.6;">
@@ -753,7 +729,7 @@ document.addEventListener("DOMContentLoaded", () => {
     
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <img src="images/LOGO_01.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
       <p style="line-height:1.7; font-size:16px; color:#fff;">
         Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
       </p>
