--- a/product.html
+++ b/product.html
@@ -143,7 +143,7 @@
     
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <img src="images/LOGO_01.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
       <p style="line-height:1.7; font-size:16px; color:#fff;">
         Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
       </p>
