--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
   <div class="map-container" style="max-width: 1200px; margin: 0 auto;">
     <h2 class="map-heading" style="text-align: center; margin:20px 0; font-size: 28px;">Find Us on Map</h2>
     <p class="map-location" style="text-align: center; font-size: 16px; margin: 0 0 20px 0;">
-      <i class="fas fa-map-marker-alt" style="color:#e63946;"></i> Plot No. 14, Suvarna Colony, Karvenagar, Pune - 411052
+      <i class="fas fa-map-marker-alt" style="color:#0a3d62;"></i> Plot No. 14, Suvarna Colony, Karvenagar, Pune - 411052
     </p>
 
     <!-- Pune Location Map -->
@@ -156,7 +156,7 @@
     
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <img src="images/LOGO_01.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
       <p style="line-height:1.6; font-size:14px;">
         Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
       </p>
