--- a/loader.html
+++ b/loader.html
@@ -10,12 +10,13 @@
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
+      background: #003366;
     }
 
-    /* Loader Background with Animation */
+    /* Loader Background with Brand Gradient */
     #loader {
-      background: linear-gradient(135deg, #e63946, #000, #b71c1c);
-      background-size: 300% 300%;
+      background: linear-gradient(135deg, #003366, #0077b6, #006d77, #009e60, #ffb703, #fb8500);
+      background-size: 500% 500%;
       animation: gradientShift 8s ease infinite;
       position: fixed;
       top: 0; left: 0;
@@ -28,6 +29,7 @@
       text-align: center;
       overflow: hidden;
       padding: 20px;
+      color: #fff;
     }
 
     @keyframes gradientShift {
@@ -41,7 +43,7 @@
       position: absolute;
       top: 50%; left: 50%;
       transform: translate(-50%, -50%);
-      opacity: 0.04;
+      opacity: 0.05;
       width: 85%;
       pointer-events: none;
       z-index: 1;
@@ -62,21 +64,22 @@
     }
 
     @keyframes pulseGlow {
-      0% { filter: drop-shadow(0 0 5px rgba(230, 57, 70, 0.5)); }
-      100% { filter: drop-shadow(0 0 20px rgba(230, 57, 70, 0.9)); }
+      0% { filter: drop-shadow(0 0 5px rgba(255, 183, 3, 0.5)); }
+      100% { filter: drop-shadow(0 0 20px rgba(255, 183, 3, 0.9)); }
     }
 
     /* Rotating Ring */
     .ring {
       position: absolute;
       width: 300px; height: 300px;
-      border: 3px solid rgba(230, 57, 70, 0.3);
-      border-top: 3px solid #e63946;
+      border: 3px solid rgba(255, 255, 255, 0.15);
+      border-top: 3px solid #ffb703;
       border-radius: 50%;
       top: 50%; left: 50%;
       transform: translate(-50%, -50%);
       animation: spin 4s linear infinite;
       z-index: 0;
+      box-shadow: 0 0 25px rgba(255, 183, 3, 0.4);
     }
 
     @keyframes spin {
@@ -86,19 +89,20 @@
     /* Slogan Shimmer */
     .slogan {
       font-size: 26px;
-      color: #fff;
       font-weight: 700;
       margin-bottom: 20px;
       letter-spacing: 1px;
-      background: linear-gradient(90deg, #fff, #e63946, #fff);
+      background: linear-gradient(90deg, #fff, #ffb703, #fff);
       background-size: 200% auto;
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: shimmer 3s linear infinite, fadeInUp 1.5s ease-out 0.5s forwards;
       opacity: 0;
       z-index: 2;
-      line-height: 1.2;
+      line-height: 1.3;
       padding: 0 10px;
+      text-transform: uppercase;
+      text-shadow: 0 0 15px rgba(255, 183, 3, 0.3);
     }
 
     @keyframes shimmer {
@@ -117,15 +121,17 @@
       margin: 0;
       font-size: 17px;
       font-weight: 500;
-      color: #f5f5f5;
       z-index: 2;
       line-height: 1.8;
     }
+
     ul li {
       opacity: 0;
       transform: translateY(20px);
       animation: fadeInUp 1s ease-out forwards;
+      color: #fff;
     }
+
     ul li:nth-child(1) { animation-delay: 1s; }
     ul li:nth-child(2) { animation-delay: 1.3s; }
     ul li:nth-child(3) { animation-delay: 1.6s; }
@@ -133,21 +139,21 @@
     ul li:nth-child(5) { animation-delay: 2.2s; }
 
     /* Responsive */
-    @media (max-width:1024px){
+    @media (max-width:1024px) {
       .loader-logo { max-width: 180px; margin-bottom: 20px; }
       .ring { width: 250px; height: 250px; }
       .slogan { font-size: 22px; }
       ul { font-size: 15px; }
     }
 
-    @media (max-width:768px){
+    @media (max-width:768px) {
       .loader-logo { max-width: 150px; margin-bottom: 15px; }
       .ring { width: 200px; height: 200px; }
       .slogan { font-size: 20px; padding: 0 5px; }
-      ul { font-size: 14px; line-height: 1.5; }
+      ul { font-size: 14px; line-height: 1.6; }
     }
 
-    @media (max-width:480px){
+    @media (max-width:480px) {
       .loader-logo { max-width: 120px; margin-bottom: 10px; }
       .ring { width: 160px; height: 160px; }
       .slogan { font-size: 18px; }
@@ -179,12 +185,10 @@
       loader.style.transition = "all 1.5s ease";
       loader.style.transform = "translateY(-100%)";
       loader.style.opacity = "0";
-      setTimeout(() => loader.style.display = "none", 12);
-    }, 35);
+      setTimeout(() => loader.style.display = "none", 1500);
+    }, 2000); // Visible for 2 seconds before fading
   });
 </script>
-
-
 
 </body>
 </html>
