--- a/solar_rooftop.html
+++ b/solar_rooftop.html
@@ -44,7 +44,7 @@
 <!-- Details Section for Solar Rooftop System -->
 <div style="flex: 1.2; padding: 0 30px; min-width: 300px;">
   <!-- Subtitle -->
-  <p style="color: #b71c1c; font-size: 14px; font-weight: bold; margin: 0;">Solar Rooftop Solutions</p>
+  <p style="color: #0a3d62; font-size: 14px; font-weight: bold; margin: 0;">Solar Rooftop Solutions</p>
 
   <!-- Product Title -->
   <h1 id="solarTitle" style="font-size: 32px; margin: 10px 0; color: #333;">Premium Solar Rooftop System</h1>
@@ -73,11 +73,11 @@
   <div style="margin-bottom: 20px;">
     <h3 style="font-size: 18px; margin-bottom: 10px; color: #333;">Benefits</h3>
     <div style="display: flex; flex-wrap: wrap; gap: 10px;">
-      <span style="background:#b71c1c; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Reduces electricity bills</span>
-      <span style="background: #b71c1c; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Eco-friendly energy</span>
-      <span style="background: #b71c1c; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">High energy reliability</span>
-      <span style="background: #b71c1c; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Customizable capacity</span>
-      <span style="background: #b71c1c; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Low maintenance</span>
+      <span style="background:#0a3d62; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Reduces electricity bills</span>
+      <span style="background: #0a3d62; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Eco-friendly energy</span>
+      <span style="background: #0a3d62; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">High energy reliability</span>
+      <span style="background: #0a3d62; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Customizable capacity</span>
+      <span style="background: #0a3d62; color: #fff; padding: 6px 12px; border-radius: 20px; font-size: 14px;">Low maintenance</span>
     </div>
   </div>
 
@@ -95,7 +95,7 @@
 
   <!-- Enquire Now Button -->
   <a href="#" onclick="redirectToSolarContact()" 
-     style="display: inline-block; margin-top: 10px; padding: 14px 28px; background-color:#b71c1c; color: #fff; font-size: 16px; border-radius: 30px; text-decoration: none; font-weight: bold; transition: 0.3s ease; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+     style="display: inline-block; margin-top: 10px; padding: 14px 28px; background-color:#0a3d62; color: #fff; font-size: 16px; border-radius: 30px; text-decoration: none; font-weight: bold; transition: 0.3s ease; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
     Enquire Now
   </a>
 </div>
@@ -176,7 +176,7 @@
     
     <!-- Company Info -->
     <div class="footer-col">
-      <img src="images/LOGO.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
+      <img src="images/LOGO_01.jpg" alt="Sunmax Solar Power Logo" style="max-width:160px; margin-bottom:15px;" />
       <p style="line-height:1.7; font-size:16px; color:#fff;">
         Established in 2013, we are a trusted supplier of solar water heaters, solar street lights and other solar solutions, delivering quality and innovation for a sustainable future.
       </p>
