Initial commit for SUNMAX project

--- a/about.html
+++ b/about.html
@@ -90,25 +90,25 @@ Furthermore, we ensure timely delivery, transparent policies and dedicated after
 
   <div class="services-grid">
     <div class="service-card">
-      <img src="https://img.icons8.com/ios-filled/50/b30000/solar-panel.png" alt="Solar Power Plants">
+      <img src="https://img.icons8.com/ios-filled/50/0a3d62/solar-panel.png" alt="Solar Power Plants">
       <h3>Solar Power Plants</h3>
       <p>Designing, installing and maintaining solar power plants for residential, commercial and industrial needs.</p>
     </div>
 
     <div class="service-card">
-      <img src="https://img.icons8.com/ios-filled/50/b30000/sun.png" alt="Solar Energy Solutions">
+      <img src="https://img.icons8.com/ios-filled/50/0a3d62/sun.png" alt="Solar Energy Solutions">
       <h3>Solar Energy Solutions</h3>
       <p>Providing customized solar energy systems that reduce electricity costs and promote clean energy use.</p>
     </div>
 
     <div class="service-card">
-      <img src="https://img.icons8.com/ios-filled/50/b30000/wind-turbine.png" alt="Hybrid Systems">
+      <img src="https://img.icons8.com/ios-filled/50/0a3d62/wind-turbine.png" alt="Hybrid Systems">
       <h3>Hybrid Solar Systems</h3>
       <p>Offering hybrid solar systems that combine solar energy with backup solutions for uninterrupted power.</p>
     </div>
 
     <div class="service-card">
-      <img src="https://img.icons8.com/ios-filled/50/b30000/battery.png" alt="Solar Battery Storage">
+      <img src="https://img.icons8.com/ios-filled/50/0a3d62/battery.png" alt="Solar Battery Storage">
       <h3>Solar Battery Storage</h3>
       <p>Supplying advanced solar battery solutions to store excess energy for use during nighttime or power cuts.</p>
     </div>
@@ -127,8 +127,7 @@ Furthermore, we ensure timely delivery, transparent policies and dedicated after
 
 <!-- RIGHT SIDE -->
 <div class="why-right">
-  <h2>We Provide World-Class
-Solar Services & Solutions</h2>
+<h2>Empowering the Future with Reliable Solar Solutions</h2>
 
   <div class="why-item">
     <div class="icon" style="background:#0a3d62;">01</div>
