Initial commit for SUNMAX project

--- a/gallery.html
+++ b/gallery.html
@@ -32,8 +32,27 @@
   <div class="gallery-item"><img src="Gallery/2kw_Nasim_Bagwan_katraj.jpg" alt="Event"><div class="overlay">2kw Nasim Bagwan, katraj</div></div>
   <div class="gallery-item"><img src="Gallery/40kw_Gharkul_Society_spine_road.jpg" alt="Event"><div class="overlay">40kw Gharkul Society, spine road</div></div>
   <div class="gallery-item"><img src="Gallery/kendriya_01.jpg" alt="Event"><div class="overlay">9.3kw kendiya vihar Street light </div></div>
-
   <div class="gallery-item"><img src="Gallery/30kw_Kendriya_Vihar_society_chikhli.jpg" alt="Event"><div class="overlay">30kw Kendriya Vihar society, chikhli.</div></div>
+
+  <div class="gallery-item"><img src="New_Gallery/Earthing_work.jpg" alt=""><div class="overlay">Professional Earthing work</div></div>
+  <div class="gallery-item"><img src="New_Gallery/earthing_work_111.jpg" alt=""><div class="overlay">Professional Earthing work</div></div>
+
+  <div class="gallery-item"><img src="New_Gallery/rajlakxhmi_01.jpg" alt="Event"><div class="overlay">Rajlakshmi Hall , Kothrud , pune 30kw  </div></div>
+  <div class="gallery-item"><img src="New_Gallery/rajlakxhmi_02.jpg" alt="Event"><div class="overlay">Rajlakshmi Hall , Kothrud , pune 30kw</div></div>
+    <div class="gallery-item"><img src="New_Gallery/rajlakxhmi_03.jpg" alt="Event"><div class="overlay">Rajlakshmi Hall , Kothrud , pune 30kw  </div></div>
+  <div class="gallery-item"><img src="New_Gallery/rajlakxhmi_04.jpg" alt="Event"><div class="overlay">Rajlakshmi Hall , Kothrud , pune 30kw</div></div>
+
+      <div class="gallery-item"><img src="New_Gallery/satav_01.jpg" alt="Event"><div class="overlay">Satav commercial complex, Wagholi, pune 25Kw</div></div>
+  <div class="gallery-item"><img src="New_Gallery/satav_02.jpg" alt="Event"><div class="overlay">Satav commercial complex, Wagholi, pune 25Kw</div></div>
+      <div class="gallery-item"><img src="New_Gallery/satav_03.jpg" alt="Event"><div class="overlay">Satav commercial complex, Wagholi, pune 25Kw</div></div>
+
+
+      
+      <div class="gallery-item"><img src="New_Gallery/vihar_01.jpg" alt="Event"><div class="overlay">kendriya vihar project 30KW (6 years old)</div></div>
+  <div class="gallery-item"><img src="New_Gallery/vihar_02.jpg" alt="Event"><div class="overlay">kendriya vihar project </div></div>
+      <div class="gallery-item"><img src="New_Gallery/vihar_03.jpg" alt="Event"><div class="overlay">kendriya vihar project 9.18KW ( 1 year old)</div></div>
+      <div class="gallery-item"><img src="New_Gallery/vihar_04.jpg" alt="Event"><div class="overlay">kendriya vihar project 9.18KW ( 1 year old)</div></div>
+ 
 
   <!-- <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">10Kw satkar reality, taljai pathar</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Dr.kamble, Ravet</div></div>
@@ -67,6 +86,42 @@
     </video>
     <div class="overlay">Earthing Work </div>
   </div> 
+
+
+
+
+  <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="New_Gallery/vihar_video_01.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">kendriya vihar </div>
+  </div>
+
+  <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="New_Gallery/Earthing_work_04.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">Earthing Work </div>
+  </div> 
+
+    <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="New_Gallery/Earthing_work_03.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">Earthing Work </div>
+  </div> 
+
+      <div class="gallery-item">
+    <video width="100%" controls>
+      <source src="New_Gallery/Earthing_work_02.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+    <div class="overlay">Earthing Work </div>
+  </div> 
+
 
   <!-- <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">9.3kw Kendiya Vihar Street light</div></div>
   <div class="gallery-item"><img src="Gallery/Blank.jpg" alt="Event"><div class="overlay">15kw Satav commercial space, Wagholi</div></div>
