--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ document.addEventListener("DOMContentLoaded", () => {
     <div class="company-col left gsap-fade-left">
     <h2 style="font-size:2.5rem;">Company Profile</h2>
 
-      <p>Introduction : <br> Sunreen is a global solar energy solutions provider with end-to-end capabilities that drive energy savings for clients.</p>
+      <p>Introduction : <br> Sunmax Solar Power is a global solar energy solutions provider with end-to-end capabilities that drive energy savings for clients.</p>
       <p>We are solar system integrator providing design, installation, net energy metering, monitoring & maintenance Gallery.</p>
       <p>Integrated all types of solar PV systems i.e. residential, commercial and industrial.</p>
       <p>Our motive: cost effective projects with excellent payback.</p>
