Updated sidebar and close button alignment

--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,7 @@
   <p><i class="fas fa-envelope"></i> sunmaxsolar2018@gmail.com</p>
   <p><i class="fas fa-phone"></i> +91 7263948865</p>
 
-  <!-- Social Media -->
-  <div class="social-links">
-    <a href="https://www.facebook.com/sunmaxsolar2018?rdid=QEKhiiOfIrenj66x&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F1BA3SUThJk%2F#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <!-- <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a> -->
-<a href="https://instagram.com/" target="_blank"><i class="fab fa-instagram"></i></a> 
-    <!-- <a href="https://linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a> -->
-  </div>
+
 </div>
 
     <!-- Right Form with Background Image -->
@@ -72,11 +66,16 @@
           <!-- Subject Field (auto-filled from URL) -->
           <input type="text" id="subject" placeholder="Subject" required>
           
-          <textarea id="message" placeholder="Type your message here..." required></textarea>
+       <textarea id="message" 
+  placeholder="Type your message here..." 
+  required 
+  style="font-family: 'Roboto', sans-serif;">
+</textarea>
+
           
           <div id="formMsg" style="margin-bottom:10px; font-size:14px;"></div>
 
-          <button type="submit">SEND</button>
+          <button type="submit">Send</button>
         </form>
       </div>
     </div>
