--- a/index.html
+++ b/index.html
@@ -114,57 +114,189 @@
 
 <!-- PM Surya Ghar: Muft Bijli Yojana Section -->
 <!-- PM Surya Ghar: Muft Bijli Yojana Section -->
-<section id="pm-yojana" 
-         style="position:relative; padding:80px 20px; font-family:'Poppins',sans-serif; 
-                background:url('images/MODIJI.jpg') center/cover fixed no-repeat;">
-  
-  <!-- Overlay to darken background for readability -->
-  <div style="position:absolute; inset:0; background:rgba(0,0,0,0.65); z-index:0;"></div>
+<section id="pm-yojana">
+  <div class="content">
+    <p class="tagline">Government Solar Scheme by Sunmax Solar Power</p>
 
-  <!-- Content Wrapper (Full Width Now) -->
-  <div style="position:relative; z-index:1; max-width:1000px; margin:auto; 
-              display:flex; flex-direction:column; gap:25px; color:#fff;">
+    <h2>PM Surya Ghar: <span>Muft Bijli Yojana</span></h2>
 
-    <!-- Small Tagline -->
-    <p style="color:#ffdede; font-weight:600; font-size:1rem; margin-bottom:5px; text-transform:uppercase;">
-      Government Solar Scheme by Sunmax Solar Power
-    </p>
-
-    <!-- Title -->
-    <h2 style="font-size:2.8rem; font-weight:700; line-height:1.3; color:#fff; text-shadow:2px 2px 8px rgba(0,0,0,0.7);">
-      PM Surya Ghar: <span style="color:#ffdede;">Muft Bijli Yojana</span>
-    </h2>
-
-    <!-- Description -->
-    <p style="color:#f9f9f9; font-size:1.05rem; line-height:1.9; max-width:900px; text-shadow:1px 1px 6px rgba(0,0,0,0.6);">
-      Approved on <b>29th February 2024</b>, the <b>PM Surya Ghar: Muft Bijli Yojana</b> aims to increase rooftop solar capacity and empower households to generate their own electricity. 
-      With an outlay of <b>₹75,021 crore</b>, the scheme will run till FY 2026-27, implemented by <b>National Programme Implementation Agency (NPIA)</b> and <b>State Implementation Agencies (SIAs)</b>.  
+    <p class="description">
+      Approved on <b>29th February 2024</b>, the <b>PM Surya Ghar: Muft Bijli Yojana</b> aims to increase rooftop solar capacity and empower households to generate their own electricity.
+      With an outlay of <b>₹75,021 crore</b>, the scheme will run till FY 2026-27, implemented by <b>National Programme Implementation Agency (NPIA)</b> and <b>State Implementation Agencies (SIAs)</b>.
       <br><br>
       <b>Sunmax Solar Power</b> is proudly providing services under this scheme to help households adopt clean energy solutions.
     </p>
 
-    <!-- Eligibility -->
-    <h3 style="font-size:1.7rem; color:#ffdede; margin-top:20px; text-shadow:1px 1px 5px rgba(0,0,0,0.6);">
-      Eligibility Criteria
-    </h3>
-    <ul style="list-style:none; padding:0; margin:0 0 20px; font-size:1.05rem; line-height:1.9;">
+    <h3>Eligibility Criteria</h3>
+    <ul>
       <li>✔️ Must be an <b>Indian citizen</b>.</li>
       <li>✔️ Must own a house with a suitable rooftop for solar panels.</li>
       <li>✔️ Must have a valid electricity connection.</li>
       <li>✔️ Must not have availed of any other solar subsidy.</li>
     </ul>
 
- 
-    <!-- CTA Button -->
- <a href="yojna.html" 
-   style="align-self:flex-start; padding:14px 32px; background:#ffdede; color:#0a3d62; 
-          text-decoration:none; font-weight:600; font-size:1.1rem; border-radius:25px; 
-          transition:0.3s; box-shadow:0 4px 12px rgba(0,0,0,0.3);">
-  Read More →
-</a>
-
+    <a href="yojna.html" class="cta">Read More →</a>
   </div>
 </section>
+
+<style>
+  /* ---------- BASE STYLES ---------- */
+  #pm-yojana {
+    position: relative;
+    padding: 80px 20px;
+    font-family: "Poppins", sans-serif;
+    background: url("images/MODIJI.jpg") center/cover fixed no-repeat;
+    color: #fff;
+    overflow: hidden;
+  }
+
+  #pm-yojana::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.65);
+    z-index: 0;
+  }
+
+  #pm-yojana .content {
+    position: relative;
+    z-index: 1;
+    max-width: 1000px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
+
+  #pm-yojana .tagline {
+    color: #ffdede;
+    font-weight: 600;
+    font-size: 1rem;
+    text-transform: uppercase;
+  }
+
+  #pm-yojana h2 {
+    font-size: 2.8rem;
+    font-weight: 700;
+    line-height: 1.3;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+  }
+
+  #pm-yojana h2 span {
+    color: #ffdede;
+  }
+
+  #pm-yojana .description {
+    color: #f9f9f9;
+    font-size: 1.05rem;
+    line-height: 1.9;
+    max-width: 900px;
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.6);
+  }
+
+  #pm-yojana h3 {
+    font-size: 1.7rem;
+    color: #ffdede;
+    margin-top: 20px;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.6);
+  }
+
+  #pm-yojana ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 0 20px;
+    font-size: 1.05rem;
+    line-height: 1.9;
+  }
+
+  #pm-yojana a.cta {
+    align-self: flex-start;
+    padding: 14px 32px;
+    background: #ffdede;
+    color: #0a3d62;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.1rem;
+    border-radius: 25px;
+    transition: 0.3s;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  }
+
+  #pm-yojana a.cta:hover {
+    background: #ffeaea;
+    transform: translateY(-2px);
+  }
+
+  /* ---------- RESPONSIVE ---------- */
+  @media (max-width: 1024px) {
+    #pm-yojana {
+      padding: 70px 30px;
+      background-attachment: scroll;
+    }
+
+    #pm-yojana .content {
+      max-width: 90%;
+    }
+  }
+
+  @media (max-width: 768px) {
+    #pm-yojana {
+      padding: 60px 20px;
+    }
+
+    #pm-yojana h2 {
+      font-size: 2.2rem;
+    }
+
+    #pm-yojana .description {
+      font-size: 1rem;
+      line-height: 1.8;
+    }
+
+    #pm-yojana h3 {
+      font-size: 1.5rem;
+    }
+
+    #pm-yojana a.cta {
+      font-size: 1rem;
+      padding: 12px 28px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    #pm-yojana {
+      padding: 50px 15px;
+      background-position: center top;
+    }
+
+    #pm-yojana h2 {
+      font-size: 1.8rem;
+      text-align: left;
+    }
+
+    #pm-yojana .tagline {
+      font-size: 0.9rem;
+      text-align: left;
+    }
+
+    #pm-yojana .description {
+      font-size: 0.95rem;
+      line-height: 1.7;
+      text-align: justify;
+    }
+
+    #pm-yojana ul {
+      font-size: 0.95rem;
+    }
+
+    #pm-yojana a.cta {
+      align-self: center;
+      padding: 12px 24px;
+      font-size: 0.95rem;
+    }
+  }
+</style>
+
 
 <section style="padding:80px 20px; background:white; font-family:'Poppins', sans-serif;">
   <h2 style="text-align:center; margin-bottom:40px; font-size:2.5rem; color:#444; font-weight:600;">Our Products</h2>
