--- a/navbar.html
+++ b/navbar.html
@@ -44,22 +44,26 @@
 
 <!-- Sidebar for mobile -->
 <div class="sidebar" id="sidebar">
-  <a href="javascript:void(0)" onclick="toggleSidebar()" style="font-size:20px;">✖ Close</a>
+  <a href="javascript:void(0)" class="close-btn" onclick="toggleSidebar()">✖</a>
+
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
+
   <div class="dropdown">
     <a onclick="toggleDropdown(this)">Product <span class="arrow">▶</span></a>
     <div class="dropdown-content">
-          <a href="solar_panel.html">Solar Panel"</a>
-          <a href="solar_rooftop.html">Solar Rooftop System</a>
-          <a href="solar_power.html">Solar Power System (Residential / Commercial / Industrial)</a>
-          <a href="solare_water_heater.html"> Solar Water Heater</a>
-          <a href="solar_system_repair.html">Solar System Repair & Maintenance</a>
+      <a href="solar_panel.html">Solar Panel</a>
+      <a href="solar_rooftop.html">Solar Rooftop System</a>
+      <a href="solar_power.html">Solar Power System (Residential / Commercial / Industrial)</a>
+      <a href="solare_water_heater.html">Solar Water Heater</a>
+      <a href="solar_system_repair.html">Solar System Repair & Maintenance</a>
     </div>
   </div>
-    <a href="gallery.html">Gallery</a>
+
+  <a href="gallery.html">Gallery</a>
   <a href="contact.html">Contact</a>
 </div>
+
 
 <script src="navbar.js"></script>
 </body>
